<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:padding="20dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/editCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/mainCardView"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp">

            <ImageView
                android:id="@+id/edit"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:alpha="0.5"
                android:contentDescription="@string/edit_name_card"
                android:src="@drawable/edit" />

            <ImageView
                android:id="@+id/scan_qr"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="20dp"
                android:alpha="0.5"
                android:contentDescription="@string/scan_qr_or_nfc"
                android:src="@drawable/qr" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/mainCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/scan_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:text="@string/ready_to_scan"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <FrameLayout
                android:id="@+id/nameCard"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/name_card">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/baloo_da_2"
                        android:gravity="center"
                        android:text="@string/your_name"
                        android:textSize="30sp" />
                </FrameLayout>
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/hold_phones_together"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/cancel"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:elevation="0dp"
                android:shadowColor="@android:color/transparent"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>