<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditNameCardActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:contentDescription="@string/No_speakble">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/default_cover_image" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="#90000000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:elevation="2dp"
                    android:padding="40dp"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:elevation="2dp"
                            android:src="@drawable/ns_pfp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Display Name"
                                    tools:ignore="HardcodedText"
                                    android:textColor="@color/white"
                                    android:textSize="20sp"
                                    android:layerType="software" />

                                <ImageView
                                    android:layout_width="20dp"
                                    android:layout_height="20dp"
                                    android:contentDescription="@string/user_is_verified"
                                    android:src="@drawable/nc_verified"
                                    android:layout_marginStart="10dp" />
                            </LinearLayout>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="username"
                                android:layout_marginTop="10dp"
                                tools:ignore="HardcodedText"
                                android:textColor="@color/white"
                                android:alpha="0.5" />
                        </LinearLayout>
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No bio yet"
                        tools:ignore="HardcodedText"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:layout_marginStart="5dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="bottom|end">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/action_buttons"
                            android:text="@string/edit"
                            android:textSize="16sp"
                            android:textColor="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/action_buttons"
                            android:text="@string/share"
                            android:textSize="16sp"
                            android:textColor="@color/white"
                            android:layout_marginStart="20dp"/>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>